--- a/templates/button/edit.html.twig
+++ b/templates/button/edit.html.twig
@@ -1,6 +1,6 @@
 {# https://tailwindcss.com/plus/ui-blocks/application-ui/elements/dropdowns#component-e4319217bff2762964fc89eb3382f911 #}
 <div class="relative" x-data="{ editMenuOpen: false }" @click.away="editMenuOpen = false">
-    <button @click="editMenuOpen = !editMenuOpen" type="button" class="relative rounded-full p-1 text-primery-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+    <button @click="editMenuOpen = !editMenuOpen" type="button" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
         <span class="absolute -inset-1.5"></span>
         <span class="sr-only">Edit Route</span>
         <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
