--- a/templates/button/mirror.html.twig
+++ b/templates/button/mirror.html.twig
@@ -10,7 +10,7 @@
         };
     }
 </script>
-<button x-data="initMirrorButton" @click="clickMirror" type="button" class="relative rounded-full p-1 text-primery-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+<button x-data="initMirrorButton" @click="clickMirror" type="button" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Mirror Route</span>
     <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="!isMirrored">
