--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block navigation_buttons %}
 {% include 'button/angle.html.twig' %}
-<button @click="location.href='{{ path('route_new') }}'" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2">
+<button @click="location.href='{{ path('route_new') }}'" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Add Route</span>
     <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -85,19 +85,19 @@
             }
         }
     </script>
-    <ul x-data="initRouteList()" @filter.window="observeFilter" role="list" class="divide-y divide-gray-100">
+    <ul x-data="initRouteList()" @filter.window="observeFilter" role="list" class="divide-y divide-gray-200 dark:divide-white/5">
         <template x-for="route in filteredRoutes" hidden>
             <li class="flex flex-wrap items-center justify-between gap-x-6 gap-y-4 py-5 flex-nowrap">
                 <div class="overflow-auto">
-                    <p class="text-sm/6 font-semibold text-gray-900 text-nowrap overflow-hidden text-ellipsis">
+                    <p class="text-sm/6 font-semibold text-gray-900 dark:text-white text-nowrap overflow-hidden text-ellipsis">
                         <a :href="route.link" class="hover:underline" x-text="route.name"></a>
                     </p>
-                    <div class="mt-1 items-center text-xs/5 text-gray-500">
+                    <div class="mt-1 items-center text-xs/5 text-gray-500 dark:text-gray-400">
                         <p><time :datetime="route['created_at'].toISOString()" x-text="route['created_at'].toDateString()"></time></p>
                     </div>
                 </div>
                 <div class="w-auto">
-                    <p class="text-sm/6 text-gray-900" x-text="route.grade"></p>
+                    <p class="text-sm/6 text-gray-900 dark:text-white" x-text="route.grade"></p>
                 </div>
             </li>
         </template>
