--- a/templates/setting/index.html.twig
+++ b/templates/setting/index.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="mx-auto max-w-2xl py-5">
+<div class="mx-auto max-w-2xl">
     {{ form_start(form, {method: 'POST', action: path('setting'), attr: {id: 'setting_form'}}) }}
     {{ form_end(form) }}
 </div>
