--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block main %}
 {% if route_count > 0 %}
-<dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
+<dl class="grid grid-cols-1 gap-5 sm:grid-cols-3">
     <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
       <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Number of routes</dt>
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ route_count }}</dd>
