--- a/templates/route/new.html.twig
+++ b/templates/route/new.html.twig
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="mx-auto max-w-2xl py-5">
+<div class="mx-auto max-w-2xl">
     {{ form(form) }}
 </div>
 {% endblock %}
