replace fuchsia with emerald

--- a/templates/button/angle.html.twig
+++ b/templates/button/angle.html.twig
@@ -13,7 +13,7 @@
     }
 </script>
 <div x-data="initAngleButton()" @click.away="angleMenuOpen = false">
-    <button @click="angleMenuOpen = !angleMenuOpen" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+    <button @click="angleMenuOpen = !angleMenuOpen" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
         <span class="absolute -inset-1.5"></span>
         <span class="sr-only">Angle</span>
         <div class="size-6" x-text="angle + '°'"></div>
