--- a/templates/setting/index.html.twig
+++ b/templates/setting/index.html.twig
@@ -3,7 +3,7 @@
 {% block navigation_title %}Settings{% endblock %}
 
 {% block navigation_buttons %}
-<button @click="document.getElementById('setting_form').submit()" type="button" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+<button @click="document.getElementById('setting_form').submit()" type="button" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Save Settings</span>
     <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
