--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,12 +19,12 @@
         <div class="min-h-full">
             {% set route = app.request.attributes.get('_route') %}
             {% set navigation_entries = [{'route': 'index', 'label': 'Dashboard'}, {'route': 'route', 'label': 'Routes'}, {'route': 'setting' ,'label': 'Settings'}] %}
-            <nav class="bg-fuchsia-600 dark:bg-fuchsia-800" x-data="{ open: false }">
+            <nav class="bg-emerald-600 dark:bg-emerald-800" x-data="{ open: false }">
                 <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
                     <div class="relative flex h-16 items-center justify-between">
                         <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
                             {% block navigation_button %}
-                                <button @click="open = !open" x-bind:aria-expanded="open.toString()" type="button" class="relative inline-flex items-center justify-center rounded-md bg-fuchsia-600 p-2 text-fuchsia-200 hover:bg-fuchsia-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-fuchsia-800 dark:hover:bg-fuchsia-700/75">
+                                <button @click="open = !open" x-bind:aria-expanded="open.toString()" type="button" class="relative inline-flex items-center justify-center rounded-md bg-emerald-600 p-2 text-emerald-200 hover:bg-emerald-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-emerald-800 dark:hover:bg-emerald-700/75">
                                     <span class="absolute -inset-0.5"></span>
                                     <span class="sr-only">Open main menu</span>
                                     <svg x-description="Icon when menu is closed." x-state:on="Menu open" x-state:off="Menu closed" class="size-6 block" :class="{ 'hidden': open, 'block': !(open) }" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 in-aria-expanded:hidden">
@@ -41,9 +41,9 @@
                                 <div class="flex items-baseline space-x-4">
                                     {% for entry in navigation_entries %}
                                         {% if route starts with entry.route %}
-                                            <a href="{{ path(entry.route) }}" aria-current="page" class="rounded-md bg-fuchsia-700 px-3 py-2 text-sm font-medium text-white dark:bg-fuchsia-950/40">{{ entry.label }}</a>
+                                            <a href="{{ path(entry.route) }}" aria-current="page" class="rounded-md bg-emerald-700 px-3 py-2 text-sm font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
                                         {% else %}
-                                            <a href="{{ path(entry.route) }}" class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-fuchsia-500/75 dark:hover:bg-fuchsia-700/75">{{ entry.label }}</a>
+                                            <a href="{{ path(entry.route) }}" class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
                                         {% endif %}
                                     {% endfor %}
                                 </div>
@@ -58,9 +58,9 @@
                     <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
                         {% for entry in navigation_entries %}
                             {% if route starts with entry.route %}
-                                <a href="{{ path(entry.route) }}" aria-current="page" class="block rounded-md bg-fuchsia-700 px-3 py-2 text-base font-medium text-white dark:bg-fuchsia-950/40">{{ entry.label }}</a>
+                                <a href="{{ path(entry.route) }}" aria-current="page" class="block rounded-md bg-emerald-700 px-3 py-2 text-base font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
                             {% else %}
-                                <a href="{{ path(entry.route) }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-fuchsia-500/75 dark:hover:bg-fuchsia-700/75">{{ entry.label }}</a>
+                                <a href="{{ path(entry.route) }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
                             {% endif %}
                         {% endfor %}
                     </div>
