use el-dropdown for angle adjustment

--- a/templates/button/angle.html.twig
+++ b/templates/button/angle.html.twig
@@ -5,25 +5,25 @@
     {
         return {
             angle: Alpine.$persist(0),
-            angleMenuOpen: false,
             changeAngle(angle) {
                 this.angle = angle;
             }
         }
     }
 </script>
-<div x-data="initAngleButton()" @click.away="angleMenuOpen = false">
-    <button @click="angleMenuOpen = !angleMenuOpen" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+<el-dropdown class="inline-block" x-data="initAngleButton()">
+    <button class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
         <span class="absolute -inset-1.5"></span>
         <span class="sr-only">Angle</span>
         <div class="size-6" x-text="angle + '°'"></div>
     </button>
-    <div x-show="angleMenuOpen" class="absolute right-0 z-10 mt-0.5 w-32 origin-top-right rounded-md bg-white shadow-lg outline-1 outline-black/5 transition transition-discrete [--anchor-gap:--spacing(2)] data-closed:scale-95 data-closed:transform data-closed:opacity-0 data-enter:duration-100 data-enter:ease-out data-leave:duration-75 data-leave:ease-in dark:bg-gray-800 dark:shadow-none dark:-outline-offset-1 dark:outline-white/10" role="menu" aria-orientation="vertical" aria-labelledby="more-menu-button" tabindex="-1" x-cloak>
-        {% for i in 0..14 %}
-            <a href="#" @click="changeAngle({{ i * 5 }}); angleMenuOpen = false; return false;" class="block px-4 py-2 text-sm text-gray-700 focus:bg-gray-100 focus:text-gray-900 focus:outline-hidden dark:text-gray-300 dark:focus:bg-white/5 dark:focus:text-white" role="menuitem" tabindex="-1" id="menu-item-6">
-                <span class="mr-3 size-5">{{ i * 5 }}</span>
-            </a>
-        {% endfor %}
-    </div>
-</div>
+
+    <el-menu anchor="bottom end" popover class="w-56 origin-top-right divide-y divide-gray-100 rounded-md bg-white shadow-lg outline-1 outline-black/5 transition transition-discrete [--anchor-gap:--spacing(2)] data-closed:scale-95 data-closed:transform data-closed:opacity-0 data-enter:duration-100 data-enter:ease-out data-leave:duration-75 data-leave:ease-in dark:divide-white/10 dark:bg-gray-800 dark:shadow-none dark:-outline-offset-1 dark:outline-white/10">
+        <div class="py-1">
+            {% for i in 0..14 %}
+            <a href="#" @click="changeAngle({{ i * 5 }}); angleMenuOpen = false; return false;" class="block px-4 py-2 text-sm text-gray-700 focus:bg-gray-100 focus:text-gray-900 focus:outline-hidden dark:text-gray-300 dark:focus:bg-white/5 dark:focus:text-white">{{ i * 5 }} °</a>
+            {% endfor %}
+        </div>
+    </el-menu>
+</el-dropdown>
 {% endif %}
