protect route edit creating and deleting from guest user

--- a/templates/button/edit.html.twig
+++ b/templates/button/edit.html.twig
@@ -1,4 +1,5 @@
 {# https://tailwindcss.com/plus/ui-blocks/application-ui/elements/dropdowns#component-e4319217bff2762964fc89eb3382f911 #}
+{% if app.user %}
 <el-dropdown class="inline-block">
     <button type="button" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
         <span class="absolute -inset-1.5"></span>
@@ -56,3 +57,4 @@
         </dialog>
     </el-dialog>
 </el-dropdown>
+{% endif %}
