--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block navigation_buttons %}
 {% include 'button/angle.html.twig' %}
+{% if app.user %}
 <button @click="location.href='{{ path('route_new') }}'" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Add Route</span>
@@ -11,6 +12,7 @@
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
     </svg>
 </button>
+{% endif %}
 {% include 'button/filter.html.twig' %}
 {% endblock %}
 
