--- a/templates/button/angle.html.twig
+++ b/templates/button/angle.html.twig
@@ -7,6 +7,7 @@
             angle: Alpine.$persist(0),
             changeAngle(angle) {
                 this.angle = angle;
+                this.$dispatch('angle', this.angle);
             }
         }
     }
