--- a/templates/form/fields.html.twig
+++ b/templates/form/fields.html.twig
@@ -4,3 +4,58 @@
         <input type="hidden" {{ block('widget_attributes') }} :value="holdSetupValue">
     </div>
 {% endblock %}
+{% block angle_widget %}
+    <script>
+        function initAngleInput()
+        {
+            return {
+                angle: Alpine.$persist(0),
+                observeAngle(event) {
+                    this.angle = event.detail;
+                }
+            }
+        }
+    </script>
+    <div x-data="initAngleInput" @angle.window="observeAngle">
+        <input type="number" :value="angle" class="mt-2 block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-emerald-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:placeholder:text-gray-500 dark:focus:outline-emerald-500" disabled/>
+        <input type="hidden" {{ block('widget_attributes') }} :value="angle" />
+    </div>
+{% endblock %}
+{% block is_mirrored_widget %}
+    <script>
+        function initIsMirroredInput()
+        {
+            return {
+                isMirrored: Alpine.$persist({}),
+                init() {
+                    this.isMirrored[{{route_entity.id}}] = this.isMirrored[{{route_entity.id}}] ?? false;
+                },
+            }
+        }
+    </script>
+    <input type="hidden" x-data="initIsMirroredInput" {{ block('widget_attributes') }} :value="isMirrored[{{route_entity.id}}] ? 1 : 0"/>
+{% endblock %}
+{% block rating_widget %}
+    <script>
+        function initRatingInput()
+        {
+            return {
+                rating: 1,
+                hoverRating: 1,
+            }
+        }
+    </script>
+    <div x-data="initRatingInput" class="mt-2 flex items-center">
+        {% for i in 1..5 %}
+            <span @mouseenter="hoverRating = {{ i }}" @mouseleave="hoverRating = 1" @click="rating = {{ i }}" :class="{'text-gray-500 dark:text-gray-400': Math.max(rating, hoverRating) < {{ i }}, 'text-yellow-400': Math.max(rating, hoverRating) >= {{ i }}}">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6" x-show="Math.max(rating, hoverRating) >= {{ i }}">
+                    <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z" clip-rule="evenodd" />
+                </svg>
+                <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="Math.max(rating, hoverRating) < {{ i }}">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" />
+                </svg>
+            </span>
+        {% endfor %}
+        <input type="hidden" {{ block('widget_attributes') }} :value="rating"/>
+    </div>
+{% endblock %}
